# laserfun

./: .gitignore  .readthedocs.yaml  COMMIT_MESSAGE.txt  LICENSE  README.md  README.rst  compare_compressor_phase.py  pyNLSE.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
doc/source/: conf.py  index.rst  laserfun.rst  nlse.rst
examples/: NLSE comparison with pyNLO.py  NLSE length dependent properties.py  NLSE pulse propagation.py  NLSE simple propagation.py  NLSE waveguide 0.1.py  NLSE_HNLF.py  NLSE_analytical_benchmarks.py  NLSE_compare_with_pyNLO.py  NLSE_dudley.py  NLSE_length_dependent.py  NLSE_normal_HNLF_compression.py  NLSE_pulse_propagation.py  NLSE_simple.py  NLSE_waveguide.py  Si3N4_oxideclad_thick-750nm_widths-0.4-3.9_wav-0.40-3.00um.npz  __init__.py  comparison with pyNLO.py  grating_compressor.py  grating_compressor_expansion.py  pulse - compare pulse shapes.py  pulse_compare_shapes.py  pulse_dispersion.py  simple_SSFM_comparison.py  spectrogram_plot_example.py  test.ipynb
examples/archive/: NLSE_compare_with_pyNLO.py
examples/benchmarks/: integrator_comparison.py
examples/dispersion/: Si3N4_airclad_thickness-600nm_widths-0.4-3.9_wav-0.40-3.00um.npz  Si3N4_oxideclad_thickness-600nm_widths-0.4-3.9_wav-0.40-3.00um.npz  Si3N4_oxideclad_thickness-800nm_widths-0.4-3.9_wav-0.40-3.00um.npz  (+2 more)
laserfun/: __init__.py  fiber.py  nlse.py  pulse.py  tools.py  tools_backup.py
nlse/: NLSE.py  PulseBase.py  __init__.py  fiber.py  pulse.py
pynlse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+4 files in other folders)
