[project]
name = "laserfun"
version = "0.0.1"
description = "Functions for lasers"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx_rtd_theme>=1.2"
]

[tool.setuptools]
packages = ["laserfun"]  # Replace with your actual package/module name

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



